--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/questionario/questionario-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/questionario/questionario-form.html
@@ -11,7 +11,8 @@
 	    	<div layout="row" style="margin-right: 30px;" layout-align="end center">
 		        <md-button class="md-raised" ng-click="$state.go( QUESTIONARIO_LIST_STATE )">Voltar</md-button>
 		        <md-button class="md-raised " ng-click="enviarParaAprovacao()" ng-if="model.questionario.entity.id && ( model.versao.entity.status == 'RASCUNHO' || model.versao.entity.status == 'REJEITADO' )">Enviar para aprovação</md-button>
-		        <md-button class="md-raised " ng-click="aprovarQuestionario()" ng-if="hasPermission('ADMINISTRATOR') && ( model.questionario.entity.id && ( model.versao.entity.status == 'AGUARDANDO_APROVACAO' || model.versao.entity.status == 'REJEITADO' ))">Aprovar questionário</md-button>
+		        <md-button class="md-raised " ng-click="aprovarQuestionario()" ng-if="hasPermission('ADMINISTRATOR') && ( model.questionario.entity.id && ( model.versao.entity.status == 'AGUARDANDO_APROVACAO'  ))">Aprovar questionário</md-button>
+		        <md-button class="md-raised " ng-click="recusarQuestionario()" ng-if="hasPermission('ADMINISTRATOR') && ( model.questionario.entity.id && ( model.versao.entity.status == 'AGUARDANDO_APROVACAO' ))">Recusar questionário</md-button>
 		        <md-button class="md-raised " ng-click="aumentarVersaoQuestionario()" ng-if="user.principal.id == model.questionario.entity.usuarioCriador.id && ( model.questionario.entity.id && ( model.versao.entity.status == 'APROVADO') )">Aumentar versão</md-button>
 		        <md-button class="md-raised md-accent" ng-click="save()">Salvar</md-button>
 	    	</div>
@@ -75,7 +76,7 @@
 										</tr>
 									</thead>
 									<tbody md-body>
-										<tr md-row md-select="dessert" style="cursor:pointer" ng-click="openInsertUpdateQuestaoHandler( questao )" md-auto-select ng-repeat="questao in model.questao.page.content track by questao.id">
+										<tr md-row md-select="dessert" style="cursor:pointer" ng-click="$scope.model.versao.entity.status == 'RASCUNHO' ? openInsertUpdateQuestaoHandler( questao ) : null" md-auto-select ng-repeat="questao in model.questao.page.content track by questao.id">
 											<td md-cell>{{ questao.descricao }}</td>
 											<td md-cell>{{ questao.tipoQuestao | translate }}</td>
 										</tr>
