alguns ajustes para abanca

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -28,7 +28,7 @@
 	    </md-toolbar>
 		
 			<md-content layout="column" flex style="height:100%">
-				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
+				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.familia.selectedTab">
 					<md-tab label="Família">
 						
 						<div layout-fill style="height:50%">
