front-end fornecedor

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -49,6 +49,8 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/popup/selecionar-crianca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/avaliacao-individual-controller.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/fornecedor/fornecedor-controller.js}"></script>
+		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
 		<script type="text/javascript" th:src="@{/static/js/angular.maskMoney.js}"></script>
